@@ -18,6 +18,10 @@
 | | Description | PR
 
 | 🐣
+| Removes unnecessary help message introduced for machine-readable outputs for commands which does not have -o url flag
+| https://github.com/knative/client/pull/1152[#1152]
+
+| 🐣
 | Improve error handling in clients
 | https://github.com/knative/client/pull/1154[#1154]
 
